# DailyMind

./: .gitignore  CMakeLists.txt  README.md
BrowsingHistory/: CMakeLists.txt  historytracker.cpp  historytracker.h
DataStorage/: CMakeLists.txt  datastore.cpp  datastore.h
MainWindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  textprocessor.cpp  textprocessor.h
Screenshot/: CMakeLists.txt  screenshotter.cpp  screenshotter.h
SpeechRecognition/: CMakeLists.txt  speechrecognizer.cpp  speechrecognizer.h
